--- a/HR_Modules/HR_CSS/jobposting_db.css
+++ b/HR_Modules/HR_CSS/jobposting_db.css
@@ -343,9 +343,7 @@ a{
     .container.header{
         z-index: 2;
         grid-area: 1 / 2 / 1 / 5;
-    
-        border-bottom-left-radius: var(--border-radius_10--);
-  
+        border-bottom-left-radius: var(--border-radius_10--);  
         background-color: var(--gainsbro);
     }
         .header_parts{
@@ -434,9 +432,85 @@ a{
 
 
 
-    .container.jp_number_frame{
-        grid-area: 2/ 2 / 2 / 5;
+
+
+/* JP NUMBERS DIV */
+.container.jp_number_frame{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-area: 2/ 2 / 2 / 5;
+    gap: 1rem;
+    box-shadow: none;
+    background-color: transparent;
+  
+}
+
+    .nc{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        height: 100%;
+        border-radius: 8px;
+        box-shadow: 5px 5px 10px 5px rgba(53,53,53,0.1);
     }
+        .nc_text_div {
+            width: 80%;
+        }
+
+
+    .number_card_a{
+     
+        grid-area: 1/ 1 / 3/ 1;
+        background:linear-gradient(45deg,var(--white-blple--),var(--color-success_b));
+      
+    }
+
+
+
+    .number_card_b{
+        grid-area: 3/ 1 / 3/ 1;
+        background-color: var(--white-blple--);
+    }
+    .number_card_c{
+        grid-area: 4/ 1 / 4/ 1;
+        background-color: var(--white-blple--);
+    }
+    
+        .number_card.total_jobpost{
+            
+        }   
+            .total_boxes{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+            }
+            .label_box{
+               justify-content: start;
+               align-items: end;
+                height: 30%;
+    
+            }
+                .label_box svg{
+                    width: 1rem;
+                    height: 1rem;
+                }
+
+            #draft_icon{
+                fill:var(--color-dark-blue);
+                margin: 0.1rem 0.3rem;
+                margin-bottom: 0.4rem;
+            }
+            
+            .total_jobpost_txt_div{
+                height: 70%;
+              
+            }
+
+
+
 
 
 
@@ -465,7 +539,6 @@ a{
         margin-right: 1rem;
         grid-area: 3/ 2 / 3 / 5;
 
-        display: none;
     }
 
         .jp_container.jp_joblist_table_labels_stuff{
@@ -491,9 +564,9 @@ a{
                 align-items: center;
                 justify-content: start;
                
+                
             }
                     .jp_table_a_title{
-                        
                         font-size: 1.3rem;
                         font-family: 'Poppins Medium';  
                         color:rgba(44, 46, 58,0.8);
@@ -518,9 +591,6 @@ a{
                         background-color: transparent;
                     }
 
-                      #jp_table_search_form_a span{
-                            font-family: 'Roboto_Mono';
-                        }
 
 
                         #jp_inp_search_a:focus + #jp_tp_search_lbl_a,
@@ -555,7 +625,6 @@ a{
                             background-color: var(--white-blple--);
                             padding: 0.2rem 0.3rem;                          
                             margin: 0.2rem 0.5rem;
-                 
                         }
                        
                         #jp_tb_search-btn svg{
@@ -566,8 +635,14 @@ a{
                         #jp_tb_search-btn:hover{
                                 background:linear-gradient(45deg,var(--white-blple--),var(--color-success_b));
                             }
+                            
 
         
+
+            /* right    */
+            .right_tb_box{
+                     margin-right: 1rem;
+            }
             .tb_lbl_div.right_tb_lbl_div{
                 display: flex;
                 align-items: center;
@@ -578,10 +653,7 @@ a{
 
          
                 .filter_status{
-                    border-radius: var(--border-radius_5--);
-                 
-                    margin-right: 2rem;
-                    background-color:var(--gainsbro);
+                    border-radius: var(--border-radius_5--);                  
                     padding: 0.1rem 0rem;
                     outline: none;
                     border: none;
@@ -600,21 +672,19 @@ a{
                 }
 
                 
-        
-
 
 
                 .tb_lbl_div.right_tb_lbl_div .tb_add_jobpost_link{
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    margin-right: 1rem;
+                    margin: 0rem;
                     text-decoration: none;
                     font-size: 1rem;
                     padding: 0.5rem 1.5rem;
                     border-radius: var(--border-radius_8--);
                     cursor: pointer;
-                    box-shadow: 2px 2px 3px 2px rgba(53,53,53,0.2);
+                   box-shadow: 5px 5px 10px 5px rgba(53,53,53,0.1);
                     background-color: var(--white-blple--);
                     color: var(--lusion-dark-b);   
                 }   
@@ -623,6 +693,33 @@ a{
                     background:linear-gradient(to top right,var(--white-blple--),var(--white-blple--),var(--main-white--));          
                 }   
 
+
+            .table_switch_frame{
+                display: flex;
+                align-items: center;                      
+            }   
+                .table_switch_frame button{
+                    border-radius: var(--border-radius_5--);                  
+                    padding: 0.2rem 0.5rem;
+                    outline: none;
+                    border: none;
+                    cursor: pointer;
+                   
+                  box-shadow: 5px 5px 10px 5px rgba(53,53,53,0.1);
+                    background-color: var(--main-white--);
+                }
+
+                .table_switch_frame #table-a-switch{
+                    background-color: var(--white-blple--);
+                }
+                .table_switch_frame #table-b-switch{
+                    background-color: var(--main-white--);
+                  }   
+
+
+
+
+            /* SUCCESS DIV */
             .success_div{
                 display: flex;
                 align-items: center;
@@ -634,7 +731,6 @@ a{
                 color: var(--moon-phases-b);
                 background-color: rgb(199, 224, 201);
                 border: 1px solid var(--color-success_a);
-
             }
               
 
@@ -658,9 +754,14 @@ a{
                         align-items:center;
                         justify-content: center;
                         align-self: center;
-                        width: 50%;
-                     
+                        width: 50%;                
                     }
+
+
+
+
+
+
 
         .joblist_content_div {
             display: flex;
@@ -670,7 +771,6 @@ a{
             width: 96%;
             margin-bottom: 2rem;
         }
-    
             .joblist_content_div .table_div {
                 display: flex;
                 justify-content: start;
@@ -705,14 +805,15 @@ a{
                     table-layout: fixed; 
                     background-color: transparent;
                     border-collapse: collapse; 
-                }
-                
+                }        
                     .jp_table .jp_tr{
                         background:linear-gradient(45deg,#d0d7e6,var(--white-blple--));
                     }
                                 
-                    /* Table Header Styles */
-                    .jp_table .jp_th {
+
+                
+                /* TABLE HEADER STYLES */
+                 th{
                         font-family: 'Poppins Medium';  
                         text-align: center;
                         padding: 0.2rem; 
@@ -723,7 +824,6 @@ a{
                         color: var(--lusion-dark-b);
                         width: 25%; 
                         background-color: transparent;
-                     
                         box-sizing: border-box;
                         word-wrap: break-word; 
                         overflow-wrap: break-word; 
@@ -766,21 +866,19 @@ a{
                         background-color: var(--main-white--);
                     }
                     
-                    .jp_table tr:nth-child(even) {
-                      
+                    .jp_table tr:nth-child(even) {              
                         background-color: var(--gainsbro);
                     }
 
                 
 
                     #noresults_td_a{
-                        padding: 5rem;
-                        
+                        padding: 5rem;         
                      }
      
                         
                         /* Table Cell Styles */
-                        .jp_table td {
+                        td {
                             width: 25%;  
                             padding: 1rem;
                             font-size: 0.8rem;
@@ -791,7 +889,6 @@ a{
                             
                             box-sizing: border-box;              
                             background-color: transparent;
-                         
                         }
 
                             .jp_table button{
@@ -815,10 +912,7 @@ a{
                             }
 
                         
-                         
-
-
-
+                        
                             .jp_table .tba_output_jp_tr:hover{
                                 background: linear-gradient(to left,var(--main-white--),var(--white-blple--)); 
                             }
@@ -830,10 +924,8 @@ a{
                             .tbl-a-btn-container{
                                 
                                 display: flex;
-                                justify-content: space-evenly;
-                               
+                                justify-content: space-evenly;                 
                                 width: 100%;
-                             
                               
                             }.tbl-a-btn-container svg{
                                 pointer-events: none;
@@ -893,26 +985,55 @@ a{
                                         background:linear-gradient(45deg, var(--color-danger-b),var(--main-white--));
                                      }
 
-                                      
-    
-
-                  
+                            
                                      
+                .table_b_content_div{
+                    display: none;
+                    height: 100%;
+                    align-items: center;
+                    justify-content: start;
+                    flex-direction: column;
+                    height: 80%;
+                    width: 96%;
+                    margin-bottom: 2rem;
+                }
+                    .table_b_content_div .table_div{
+                        display: flex;
+                        align-items: center;
+                        justify-content: start;
+                        flex-direction: column;
+                        width: 100%;
+                        overflow-y: auto;
+                        overflow-x: hidden;
+                    }
 
+                        .jp_th_b#jp_th_b_action{
+                            width: 100%;
+                            padding: 0rem 4rem;
+                        }
 
-
-
-
+                        .tbl-button-action-div_b{
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            height: 100%;
+                            width: 100%;   
+                        }
+                        
+                            
+                            .tbl-b-btn-container_b{
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                height: 100%;
+                                width: 100%;
+                                padding: 0rem;
+                            }
 
     /* ====================================================================================================== */
-    /* TABLE B WORKSPACE ====================================================================================================== */
+    /* TABLE B CONTENT_DIV ====================================================================================================== */
     /* ====================================================================================================== */
-    .container.table_b_workspace{
-        grid-area: 3 / 2/ 3/ 5;
     
-    }
-                                
-
 
 
  
