--- a/HR_Modules/HR_CSS/jobposting_db.css
+++ b/HR_Modules/HR_CSS/jobposting_db.css
@@ -460,27 +460,23 @@ a{
         }
 
 
-    .number_card_a{
-     
-        grid-area: 1/ 1 / 3/ 1;
+    .total_jobpost_card{
+        grid-area: 1/ 1 / 1/ 1;
         background:linear-gradient(45deg,var(--white-blple--),var(--color-success_b));
+    }
+
+
+    .published_jobpost_card{
+        grid-area: 1/ 2 / 1/ 2;
+        background-color: var(--white-blple--);
       
     }
-
-
-
-    .number_card_b{
-        grid-area: 3/ 1 / 3/ 1;
-        background-color: var(--white-blple--);
-    }
-    .number_card_c{
-        grid-area: 4/ 1 / 4/ 1;
+    .number_card.draft_jobpost_card{
+          grid-area: 1/ 3 / 1/ 3;
         background-color: var(--white-blple--);
     }
     
-        .number_card.total_jobpost{
-            
-        }   
+          
             .total_boxes{
                 display: flex;
                 align-items: center;
@@ -491,24 +487,19 @@ a{
                justify-content: start;
                align-items: end;
                 height: 30%;
-    
             }
                 .label_box svg{
                     width: 1rem;
                     height: 1rem;
+                    fill:var(--color-dark-blue);
+                    margin: 0.1rem 0.3rem;
+                    margin-bottom: 0.4rem;  
                 }
 
-            #draft_icon{
-                fill:var(--color-dark-blue);
-                margin: 0.1rem 0.3rem;
-                margin-bottom: 0.4rem;
-            }
             
-            .total_jobpost_txt_div{
+            .nc_text_div{
                 height: 70%;
-              
             }
-
 
 
 
@@ -806,7 +797,7 @@ a{
                     background-color: transparent;
                     border-collapse: collapse; 
                 }        
-                    .jp_table .jp_tr{
+                     .jp_tr{
                         background:linear-gradient(45deg,#d0d7e6,var(--white-blple--));
                     }
                                 
@@ -986,7 +977,12 @@ a{
                                      }
 
                             
-                                     
+                        
+                                            
+        /* ====================================================================================================== */
+        /* TABLE B CONTENT_DIV ====================================================================================================== */
+        /* ====================================================================================================== */
+
                 .table_b_content_div{
                     display: none;
                     height: 100%;
@@ -1005,36 +1001,35 @@ a{
                         width: 100%;
                         overflow-y: auto;
                         overflow-x: hidden;
+                    }   
+                    .table_div table{
+                        border-spacing: 0rem;
                     }
+    
 
-                        .jp_th_b#jp_th_b_action{
-                            width: 100%;
-                            padding: 0rem 4rem;
-                        }
+                            .jp_th_b#jp_th_b_action{
+                                width: 100%;
+                                padding: 0rem 4rem;
+                            }
 
-                        .tbl-button-action-div_b{
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            height: 100%;
-                            width: 100%;   
-                        }
-                        
-                            
-                            .tbl-b-btn-container_b{
+                            .tbl-button-action-div_b{
                                 display: flex;
                                 align-items: center;
                                 justify-content: center;
                                 height: 100%;
-                                width: 100%;
-                                padding: 0rem;
+                                width: 100%;   
                             }
+                            
+                                
+                                .tbl-b-btn-container_b{
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    height: 100%;
+                                    width: 100%;
+                                    padding: 0rem;
+                                }
 
-    /* ====================================================================================================== */
-    /* TABLE B CONTENT_DIV ====================================================================================================== */
-    /* ====================================================================================================== */
+
     
-
-
- 
-    
+        
