I Fixed Resume File Not Downloading On The Browser

--- a/HR_Modules/HR_CSS/employee_management_db.css
+++ b/HR_Modules/HR_CSS/employee_management_db.css
@@ -1650,211 +1650,21 @@ svg{
     
 
 /*  DARKMODE CLASS FUNCTIONS --------------------------------------------------------------------- */
-#db_wrapper.darkmode_popup{
-    background-color: var(--color-dark-variant);
-}
-    #db_bd_id.darkmode_popup{
-        background-color: var(--lusion-dark-b);
-    }
 
-    .db_template_wrapper.darkmode_popup{
-        background-color: var(--lusion-dark-b);
-    }
-
-
-    
-#db_header_logo_div_id.darkmode_popup{
-    background-color: var(--color-dark-variant);
-    box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.5);
-}
-#db_header_logo_div_id span.darkmode_popup{
-        background-clip: text;
-    
-        background:
-        linear-gradient(
-        to left,
-        var(--moon-phases-c),
-        var(--white-blple--)
-
-        );
-
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent; 
-}
-
-
-
-#db_sidebar_id.darkmode_popup{
-    background:linear-gradient(to top,var(--color-dark-variant), var(--color-dark-variant),var(--color-dark-variant));
-    box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.5);    
-    transition: 1s;
-}
-    svg.darkmode_popup{
-        fill: var(--main-white--);
-    }
-
-    .sidebar span.darkmode_popup{
-        color: var(--main-white--);
-    }
-    .sidebar button.darkmode_popup{
-        color: var(--main-white--);
-    }
-
-
-
-
-
-#db_header_id.darkmode_popup{
-    background-color: var(--color-dark-variant);
-    box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.5);
-}
-
-    #user_greetings.darkmode_popup{
-        color: var(--main-white--);
-    }
-
-    #hd_role_type.darkmode_popup{
-        color: var(--color-warning);
-    }
-
-
-
-
-
-
-#db_numbers_contents_id.darkmode_popup{
-    background-color: var(--lusion-dark-b); 
-}
-
-    #employee_number.darkmode_popup{
-        box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.3);
-    }
-
-    #jobseekers_number.darkmode_popup{
-        box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.3);
-    }
-
-    #jobpost_number.darkmode_popup{
-        box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.3);
-    }
-
-
-    .number_contents_b.darkmode_popup{
-        background-color: none;
-    }
-    .approved_jobseekers.darkmode_popup{
-        box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.3);
-    }
-
-        .approved_jobseekers span.darkmode_popup{
-          color: var(--main-white--);
+        /* DARKMODE SECTION ================================================================ */
+        body.darkmode_popup{
+            background-color:var(--color-dark-blue);
         }
-
-    .rejected_jobseekers.darkmode_popup{
-        box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.3);
-    }
-        .rejected_jobseekers span.darkmode_popup{
-        color: var(--main-white--);
-        }
-
-
-
-
-    
-#db_main_contents_id.darkmode_popup{
-    background-color: var(--color-dark-variant);
-    box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.5);
-  
-}
-    .mc_header_text.darkmode_popup{
-        color: var(--main-white--);
-    }
-
-           
-    .select_rj_appr.darkmode_popup{
-        background-color: var(--color-dark-variant);
-        color: var(--main-white--);
-        border: 2px solid var(--dark-shadow-friend);
-        box-shadow: 3px 3px 3px 1px rgba(0,0,0,0.5);
-    }
-
-
-    .mc_table_div.darkmode_popup::-webkit-scrollbar{
-        background-color: var(--color-dark-variant);
-    }
-    
-
-    .mc_table_div.darkmode_popup::-webkit-scrollbar-thumb{
-        border: solid 4px var(--color-dark-variant);
-    }
-
-
-    .mc_th_tr.darkmode_popup{
-        background:linear-gradient(to right,var(--moon-phases-c),var(--color-dark-variant));
-    }
-
-        .mc_th_tr th.darkmode_popup{
-          
-            color: var(--main-white--); 
         
+        body.darkmode_popup .container{
+            background-color: var(--color-dark-variant);     
+            box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.5);
+        }   
+
+        body.darkmode_popup{
+             background-color: red;
         }
 
-
-
-    .db_js_table .mc_data_tr:nth-child(odd).darkmode_popup{
-        z-index: 1;
-        background-color: var(--color-dark-shadow-alpha);
-
+        .darkmode_popup #darkmode_div{
+            background-color: red;
         }
-
-    .db_js_table .mc_data_tr:nth-child(even).darkmode_popup{
-
-        z-index: 2;
-        background-color: var(--color-dark-shadow);
-
-        }
-            
-    .db_js_table .mc_data_tr:hover.darkmode_popup{
-        background:linear-gradient(to right,var(--moon-phases-b),
-        var(--color-dark-variant));
-    }
-
-    td.darkmode_popup{
-        color: var(--main-white--);
-    }
-
-
-    .aside_mc_table_div.darkmode_popup::-webkit-scrollbar{
-        background-color: var(--color-dark-variant);
-       
-    }
-    
-
-    .aside_mc_table_div.darkmode_popup::-webkit-scrollbar-thumb{
-        border: solid 4px var(--color-dark-variant);
-    }
-
-
-  
-
-    #status_history_icon.darkmode_popup{
-        color: var(--main-white--);
-    }
-    #status_history_text.darkmode_popup{
-        color: var(--main-white--);
-    }
-    
-
-    
-
-
-
-.aside.darkmode_popup{
-  
-    background-color: var(--color-dark-variant);
-    box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.5);
-}
-
-   
-
-
